@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-25T16:08:45Z",
-  "count_outdated" : 1321,
-  "uniques_outdated" : 320,
+  "timestamp" : "2023-07-26T00:39:59Z",
+  "count_outdated" : 1323,
+  "uniques_outdated" : 321,
   "count" : 1373,
   "uniques" : 330,
   "views" : [
-    {
-      "timestamp": "2023-07-11T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-12T00:00:00Z",
       "count": 2,
