@@ -1,12 +1,7 @@
 {
-  "count": 52,
-  "uniques": 10,
+  "count": 50,
+  "uniques": 9,
   "views": [
-    {
-      "timestamp": "2023-07-11T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-07-12T00:00:00Z",
       "count": 2,
